# KitchenLedStrips

./: .gitattributes  .gitmodules  README.md
doc/: board-errata.txt
doc/bench/led-data-streams/: README.md
doc/datasheets/enclosure/: e-case_a_dimensions.dxf
doc/design/: DesignCalculations.ods
doc/firmware/: mcu.txt
sim/pic16f15356-ws2812b-cable-driver/: PIC16F15356_uqfn28.ibs  pic16f15356-ws2812b-cable-driver.TNO  pic16f15356-ws2812b-cable-driver.cir  pic16f15356-ws2812b-cable-driver_cir.inx
src/enclosure/: .gitattributes  back-plate-engraving.e10  back-plate-engraving.nc  back-plate-holes.e10  back-plate-holes.nc  back-plate.dxf  front-and-back-plates.scad  front-plate-engraving.e10  front-plate-engraving.nc  front-plate-holes.e10  front-plate-holes.nc  front-plate.dxf  spoilboard-cutout.e10  spoilboard-cutout.nc  test-piece-cutout.e10  test-piece-cutout.nc  tool-list.tl
src/firmware/: .gitignore  CMakeLists.txt  Makefile  Makefile.rules  kitchen-led-strips.code-workspace
src/firmware/first-attempt-in-c/: CMakeLists.txt
src/firmware/first-attempt-in-c/src/: bits.asm  bits.h  circular-buffer.c  config-words.c  event.c  event.h  initialise.h  isr.c  main.c  poll.c  poll.h  power-management.c  pwm-timer.c  sm16703p-modulator.c
src/firmware/go-go-gadget/: rhino-intents.yaml
src/firmware/lights-gadget/: Makefile  Makefile.rules
src/firmware/src/: Makefile  bits-reversal-lookup-gen.py  bits-reverse.asm  bits-reverse.inc  bits.h  bits.inc  boot.asm  circular-buffer.c  circular-buffer.h  config-words.asm  config.h.in  isr.asm  (+27 more)
src/schematics/: .gitignore
(+171 files in other folders)
